+ CSS mobile and stretch fixes

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,7 +1,8 @@
 @import 'tailwindcss';
 
 @theme {
-  --breakpoint-xs: 20rem;
+  --breakpoint-xs: 22rem;
+  --container-xs: 22rem;
   --light-green: '#d1fae5';
   --green-custom: '#059669';
   --green-dark: '#047857';
